--- a/p5/RDS/index.html
+++ b/p5/RDS/index.html
@@ -17,6 +17,7 @@
       <script src="../p5.js"></script>
       <!-- <script src="../addons/p5.sound.js"></script> -->
       <script src="sketch.js"></script>
+      <script src="sondrep5p5p5p5.js"></script>
 </head>
 
 <body>
