--- a/p5/RDS/index3.html
+++ b/p5/RDS/index3.html
@@ -16,7 +16,9 @@
       </style>
       <script src="../p5.min.js"></script>
       <!-- <script src="../addons/p5.sound.js"></script> -->
-      <script src="sketch3.js"></script>
+      <script src="structs.js" type="text/javascript"></script>
+      <!-- <script src="sketch3.js"></script> -->
+      <script src="nimaSinP5P5P5.js" type="text/javascript"></script>
 </head>
 
 <body>
