--- a/p5/RDS/index.html
+++ b/p5/RDS/index.html
@@ -14,7 +14,7 @@
 
             }
       </style>
-      <script src="../p5.js"></script>
+      <script src="p5files/p5.min.js"></script>
       <!-- <script src="../addons/p5.sound.js"></script> -->
       <script src="sketch.js"></script>
       <script src="sondrep5p5p5p5.js"></script>
