--- a/p5/RDS/index3.html
+++ b/p5/RDS/index3.html
@@ -14,7 +14,7 @@
 
             }
       </style>
-      <script src="../p5.min.js"></script>
+      <script src="p5files/p5.min.js"></script>
       <!-- <script src="../addons/p5.sound.js"></script> -->
       <script src="structs.js" type="text/javascript"></script>
       <!-- <script src="sketch3.js"></script> -->
