--- a/p5/RDS/index2.html
+++ b/p5/RDS/index2.html
@@ -13,7 +13,7 @@
                   background-color: #1b1b1b;
             }
       </style>
-      <script src="../p5.min.js"></script>
+      <script src="p5files/p5.min.js"></script>
       <script src="structs.js" type="text/javascript"></script>
       <!-- <script src="../addons/p5.sound.js"></script> -->
       <script src="p5p5p5.js" type="text/javascript"></script>
