--- a/p5/RDS/index.html
+++ b/p5/RDS/index.html
@@ -14,10 +14,11 @@
 
             }
       </style>
-      <script src="../p5.js"></script>
+      <script src="p5files/p5.min.js"></script>
       <!-- <script src="../addons/p5.sound.js"></script> -->
-      <script src="sketch.js"></script>
-      <script src="sondrep5p5p5p5.js"></script>
+      <script src="structs.js" type="text/javascript"></script>
+      <!-- <script src="sketch3.js"></script> -->
+      <script src="sondrep5p5p5p5.js" type="text/javascript"></script>
 </head>
 
 <body>
