--- a/p5/RDS/index2.html
+++ b/p5/RDS/index2.html
@@ -16,7 +16,7 @@
       <script src="p5files/p5.min.js"></script>
       <script src="structs.js" type="text/javascript"></script>
       <!-- <script src="../addons/p5.sound.js"></script> -->
-      <script src="p5p5p5.js" type="text/javascript"></script>
+      <script src="haakon.js" type="text/javascript"></script>
 </head>
 
 <body>
