--- a/p5/RDS/Tree/hei.html
+++ b/p5/RDS/Tree/hei.html
@@ -72,7 +72,6 @@
 
      .unselected {
         background-color: rgb(77, 60, 224);
-
      }
 
      .selected{
@@ -82,6 +81,7 @@
      .buttonGroup button:nth-child(2){
          margin:0 10px;
      }
+      
      .buttonGroup button:nth-child(3){
         margin-right:10px;
      }
@@ -93,7 +93,6 @@
          background-color: black;
          color: #fff;
          min-width: 120px;
-       
      }
 
     </style>
@@ -102,7 +101,6 @@
 
     <div class="buttonGroup">
         <p>Tree Structure</p>
-
     </div>
 
     <div id="chart">
@@ -110,7 +108,7 @@
     </div>
     <script src="d3.js"></script>
     <script src="d3-selection-multi.js"></script>
-    <script src="topolog.js"></script>
+    <script src="topolog.js" type="module"></script>
     <!-- <script src="denStoreTreMappen/viProver/test.js"></script> -->
 </body>
 </html>
