--- a/p5/RDS/index2.html
+++ b/p5/RDS/index2.html
@@ -15,8 +15,9 @@
       </style>
       <script src="p5files/p5.min.js"></script>
       <script src="structs.js" type="text/javascript"></script>
+      <script src="drawing.js" type="text/javascript"></script>
       <!-- <script src="../addons/p5.sound.js"></script> -->
-      <script src="haakon.js" type="text/javascript"></script>
+      <script src="main.js" type="text/javascript"></script>
 </head>
 
 <body>
