--- a/p5/RDS/index2.html
+++ b/p5/RDS/index2.html
@@ -23,6 +23,39 @@
 <body>
       <main>
       </main>
+
+      
 </body>
+
+<style>
+      canvas {
+            border: 5px solid black;
+      }
+      button {
+            background-color: white;
+            border: 2px solid black;
+            color: black;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 12px;
+            left: 50%;
+      }
+      button:hover {
+            background-color: blue;
+            color: white;
+            border: 2px solid red;
+      }
+
+      button:active {
+            background-color: #4CAF50;
+            color: white;
+      }
+</style>
 
 </html>
