--- a/p5/RDS/Tree/okok.html
+++ b/p5/RDS/Tree/okok.html
@@ -277,7 +277,7 @@
                         .attr("x", 8)
                         .attr("y", ".31em")
                         .text(function (d) {
-                              return d.name;
+                              return d.name.slice(-4);
                         });
 
                   // Use elliptical arc path segments to doubly-encode directionality.
