--- a/p5/RDS/index.html
+++ b/p5/RDS/index.html
@@ -11,19 +11,51 @@
                   padding: 0;
                   margin: 0;
                   background-color: #1b1b1b;
-
             }
       </style>
       <script src="p5files/p5.min.js"></script>
-      <!-- <script src="../addons/p5.sound.js"></script> -->
       <script src="structs.js" type="text/javascript"></script>
-      <!-- <script src="sketch3.js"></script> -->
-      <script src="sondrep5p5p5p5.js" type="text/javascript"></script>
+      <script src="drawing.js" type="text/javascript"></script>
+      <!-- <script src="../addons/p5.sound.js"></script> -->
+      <script src="main.js" type="text/javascript"></script>
 </head>
 
 <body>
       <main>
       </main>
+
+      
 </body>
+
+<style>
+      canvas {
+            border: 5px solid black;
+      }
+      button {
+            background-color: white;
+            border: 2px solid black;
+            color: black;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 12px;
+            left: 50%;
+      }
+      button:hover {
+            background-color: blue;
+            color: white;
+            border: 2px solid red;
+      }
+
+      button:active {
+            background-color: #4CAF50;
+            color: white;
+      }
+</style>
 
 </html>
